--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <head>
   <title> Pig Dice </title>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/scripts.js"></script>
