--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@
   <title> Pig Dice </title>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/scripts.js"></script>
+</head>
