added a paragraph tag

--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@
 <body>
   <h1> Pig Dice Game <h1>
     <h2>hello there...Enjoy the game<h2>
-      
+      <p><a id="newGame" href="#">New Game</a></p>
