--- a/index.html
+++ b/index.html
@@ -9,3 +9,4 @@
   <h1> Pig Dice Game <h1>
     <h2>hello there...Enjoy the game<h2>
       <p><a id="newGame" href="#">New Game</a></p>
+      <div class="row">
