--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@
     <h2>hello there...Enjoy the game<h2>
       <p><a id="newGame" href="#">New Game</a></p>
       <div class="row">
+        <div id ="player-0" class="col-md-5">
