--- a/index.html
+++ b/index.html
@@ -11,3 +11,4 @@
       <p><a id="newGame" href="#">New Game</a></p>
       <div class="row">
         <div id ="player-0" class="col-md-5">
+          <h3 id = "player-label-0">Plaer 1 </h3>
