--- a/index.html
+++ b/index.html
@@ -12,3 +12,4 @@
       <div class="row">
         <div id ="player-0" class="col-md-5">
           <h3 id = "player-label-0">Plaer 1 </h3>
+          <p id="total-0"> </p>
