--- a/index.html
+++ b/index.html
@@ -13,3 +13,5 @@
         <div id ="player-0" class="col-md-5">
           <h3 id = "player-label-0">Plaer 1 </h3>
           <p id="total-0"> </p>
+      </div>
+     </div>
