--- a/index.html
+++ b/index.html
@@ -23,3 +23,4 @@
          <p id="dice2">0</p>
        </div>
        <p><a id="roll"href="#">ROLL</a></p>
+       <p><a id="hold"href="#">HOLD<a></p>
