added div id total 1

--- a/index.html
+++ b/index.html
@@ -24,3 +24,6 @@
        </div>
        <p><a id="roll"href="#">ROLL</a></p>
        <p><a id="hold"href="#">HOLD<a></p>
+       </div>
+       <div id="player-1" class="col-md-5">
+       <h3 id="total-1"></p>
