--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       <p><a id="newGame" href="#">New Game</a></p>
       <div class="row">
         <div id ="player-0" class="col-md-5">
-          <h3 id = "player-label-0">Plaer 1 </h3>
+          <h3 id = "player-label-0">Player 1 </h3>
           <p id="total-0"> </p>
+          <div id="current-0">
       </div>
      </div>
      <div class="col-md-2 text-center">
