added p id blues

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
           <h3 id = "player-label-0">Player 1 </h3>
           <p id="total-0"> </p>
           <div id="current-0">
+          <p id="blues">Current</p>
+          <p id="current-score-0"></p>
       </div>
      </div>
      <div class="col-md-2 text-center">
