--- a/index.html
+++ b/index.html
@@ -29,4 +29,4 @@
        <p><a id="hold"href="#">HOLD<a></p>
        </div>
        <div id="player-1" class="col-md-5">
-       <h3 id="total-1"></p>
+       <h3 id="player-label-1">Player 2</h3>
