--- a/index.html
+++ b/index.html
@@ -30,3 +30,4 @@
        </div>
        <div id="player-1" class="col-md-5">
        <h3 id="player-label-1">Player 2</h3>
+       <p id="total-1"></p>
