added styles to css

--- a/index.html
+++ b/index.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title> Pig Dice </title>
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="CSS/styles.css" rel="stylesheet" type="text/css">
   <script src="js/scripts.js"></script>
 </head>
+
 <body>
+  <div class="circle">
+    <div class="wave"></div>
+</div>
   <h1> Pig Dice Game <h1>
-    <h2>hello there...Enjoy the game<h2>
-      <p><a id="newGame" href="#">New Game</a></p>
-      <div class="row">
-        <div id ="player-0" class="col-md-5">
-          <h3 id = "player-label-0">Player 1 </h3>
-          <p id="total-0"> </p>
-          <div id="current-0">
-          <p id="blues">Current</p>
-          <p id="current-score-0"></p>
-      </div>
-     </div>
-     <div class="col-md-2 text-center">
-       <div class="dice">
-         <p id="dice1">0</p>
-       </div>
-       <div class="dice">
-         <p id="dice2">0</p>
-       </div>
-       <p><a id="roll"href="#">ROLL</a></p>
-       <p><a id="hold"href="#">HOLD<a></p>
-       </div>
-       <div id="player-1" class="col-md-5">
-       <h3 id="player-label-1">Player 2</h3>
-       <p id="total-1"></p>
-     </div>
-   </div>
-   </div>
-   </body>
-   </html>
+      <h2>hello there...Enjoy the game<h2>
+          <p><a id="newGame" href="#">New Game</a></p>
+          <div class="row">
+            <div id="player-0" class="col-md-5">
+              <h3 id="player-label-0">Player 1 </h3>
+              <p id="total-0"> </p>
+              <div id="current-0">
+                <p id="blues">Current</p>
+                <p id="current-score-0"></p>
+              </div>
+
+            <div class="col-md-2 text-center">
+              <div class="dice">
+                <p id="dice1">0</p>
+              </div>
+              <div class="dice">
+                <p id="dice2">0</p>
+              </div>
+              <p><a id="roll" href="#">ROLL</a></p>
+              <p><a id="hold" href="#">HOLD<a></p>
+            </div>
+            <div id="player-1" class="col-md-5">
+              <h3 id="player-label-1">Player 2</h3>
+              <p id="total-1"></p>
+            </div>
+          </div>
+          </div>
+</body>
+
+</html>
