--- a/index.html
+++ b/index.html
@@ -3,42 +3,84 @@
 
 <head>
   <title> Pig Dice </title>
-  <link href="CSS/styles.css" rel="stylesheet" type="text/css">
-  <script src="js/scripts.js"></script>
+  <link href="CSS/styles.css" rel="stylesheet" type="text/CSS">
+  <link href="/home/musau/Documents/CSS/bootstrap.css" rel="stylesheet" type="text/CSS">
+
+<script src="js/scripts.js"></script>
+<script src="/home/musau/Documents/js/jquery-3.3.1.js"></script>
 </head>
 
 <body>
-  <div class="circle">
-    <div class="wave"></div>
-</div>
+
   <h1> Pig Dice Game <h1>
-      <h2>hello there...Enjoy the game<h2>
-          <p><a id="newGame" href="#">New Game</a></p>
-          <div class="row">
-            <div id="player-0" class="col-md-5">
-              <h3 id="player-label-0">Player 1 </h3>
-              <p id="total-0"> </p>
-              <div id="current-0">
-                <p id="blues">Current</p>
-                <p id="current-score-0"></p>
-              </div>
+      <h2 hello there....Enjoy your game!<h2>
+        <p><a id="newGame" href="#">New Game</a></p>
 
-            <div class="col-md-2 text-center">
-              <div class="dice">
+        <div class="row">
+
+          <div id="player-0" class="col-md-5">
+
+            <h3 id="player-label-0">Player 1</h3>
+
+
+            <p id="total-1">0</p>
+            <p id="total-2">0</p>
+
+
+            <div id="current-0">
+
+
+              <p id="blues">Current</p>
+
+
+              <p id="current-score-0"></p>
+
+
+            </div>
+
+
+        </div>
+
+          <div class="col-md-2 text-center">
+
+
+            <div class="ice">
+
+
                 <p id="dice1">0</p>
-              </div>
-              <div class="dice">
-                <p id="dice2">0</p>
-              </div>
-              <p><a id="roll" href="#">ROLL</a></p>
-              <p><a id="hold" href="#">HOLD<a></p>
-            </div>
-            <div id="player-1" class="col-md-5">
-              <h3 id="player-label-1">Player 2</h3>
-              <p id="total-1"></p>
-            </div>
-          </div>
-          </div>
-</body>
 
+            </div>
+
+            <div class="ice">
+
+                <p id="dice2">0</p>
+
+            </div>
+
+            <button id="roll">ROLL</button>
+
+            <button id="hold">ROLL</button>
+
+
+            </div>
+
+          <div id="player-1" class="col-md-5">
+
+            <h3 id="player-label-1">Player 2</h3>
+
+            <p id="total-1"></p>
+
+            <div id="current-1">
+
+                <p id="blu">Currrent</p>
+
+              <p id="current-score-1"></p>
+
+            </div>
+
+        </div>
+
+    </div>
+</body>
+<script src="js/scripts.js"></script>
 </html>
