--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title> Pig Dice </title>
-  <link href="CSS/styles.css" rel="stylesheet" type="text/CSS">
+  <link href="/home/musau/Documents/CSS/styles.css" rel="stylesheet" type="text/CSS">
   <link href="/home/musau/Documents/CSS/bootstrap.css" rel="stylesheet" type="text/CSS">
 
 <script src="js/scripts.js"></script>
@@ -11,7 +11,12 @@
 </head>
 
 <body>
-
+  <br>
+  <br>
+  <br>
+  <div class="panel panel-danger">
+    <div class="container">
+<div class="jumbotron">
   <h1> Pig Dice Game <h1>
       <h2 hello there....Enjoy your game!<h2>
         <p><a id="newGame" href="#">New Game</a></p>
@@ -79,7 +84,9 @@
             </div>
 
         </div>
-
+</div>
+</div>
+    </div>
     </div>
 </body>
 <script src="js/scripts.js"></script>
