--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 <script src="js/scripts.js"></script>
 <script src="/home/musau/Documents/js/jquery-3.3.1.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+</script>
 </head>
 
 <body>
