--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="/home/musau/Documents/CSS/bootstrap.css" rel="stylesheet" type="text/CSS">
 
 <script src="js/scripts.js"></script>
-
+<script scr="https://code.jquery.com/jquery-3.3.1.min.map"></script>
 <script src="/home/musau/Documents/js/jquery-3.3.1.js"></script>
 
 </head>
@@ -87,5 +87,7 @@
 
     </div>
 </body>
+<script scr="https://code.jquery.com/jquery-3.3.1.min.map"></script>
+<script src="/home/musau/Documents/js/jquery-3.3.1.js"></script>
 <script src="js/scripts.js"></script>
 </html>
