--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="CSS/styles.css" rel="stylesheet" type="text/CSS">
 
   <link href="/home/musau/Documents/CSS/bootstrap.css" rel="stylesheet" type="text/CSS">
-
+<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <script src="js/scripts.js"></script>
 <script scr="https://code.jquery.com/jquery-3.3.1.min.map"></script>
 <script src="/home/musau/Documents/js/jquery-3.3.1.js"></script>
