--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <title> Pig Dice </title>
-  <link href="/home/musau/Documents/CSS/styles.css" rel="stylesheet" type="text/CSS">
-  <link href="/home/musau/Documents/CSS/bootstrap.css" rel="stylesheet" type="text/CSS">
+  <link href="./CSS/bootstrap.css" rel="stylesheet" type="text/CSS">
+
+  <link href="./CSS/styles.css" rel="stylesheet" type="text/CSS">
 
 <script src="js/scripts.js"></script>
 <script src="/home/musau/Documents/js/jquery-3.3.1.js"></script>
