added content to README.md

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
   <link href="./CSS/styles.css" rel="stylesheet" type="text/CSS">
 
-<script src="js/scripts.js"></script>
-<script src="/home/musau/Documents/js/jquery-3.3.1.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="js/scripts.js"></script>
+  <script src="/home/musau/Documents/js/jquery-3.3.1.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
 </head>
 
@@ -19,78 +19,79 @@
   <br>
   <div class="panel panel-danger">
     <div class="container">
-<div class="jumbotron">
-  <h1> Pig Dice Game <h1>
-      <h2 hello there....Enjoy your game!<h2>
-        <p><a id="newGame" href="#">New Game</a></p>
+      <div class="jumbotron">
+        <h1> Pig Dice Game <h1>
+            <h2 hello there....Enjoy your game!<h2>
+              <p><a id="newGame" href="#">New Game</a></p>
 
-        <div class="row">
+              <div class="row">
 
-          <div id="player-0" class="col-md-5">
+                <div id="player-0" class="col-md-5">
 
-            <h3 id="player-label-0">Player 1</h3>
-
-
-            <p id="total-1">0</p>
-            <p id="total-2">0</p>
+                  <h3 id="player-label-0">Player 1</h3>
 
 
-            <div id="current-0">
+                  <p id="total-1">0</p>
+                  <p id="total-2">0</p>
 
 
-              <p id="blues">Current</p>
+                  <div id="current-0">
 
 
-              <p id="current-score-0"></p>
+                    <p id="blues">Current</p>
 
 
-            </div>
+                    <p id="current-score-0"></p>
 
 
-        </div>
-
-          <div class="col-md-2 text-center">
+                  </div>
 
 
-            <div class="ice">
+                </div>
+
+                <div class="col-md-2 text-center">
 
 
-                <p id="dice1">0</p>
-
-            </div>
-
-            <div class="ice">
-
-                <p id="dice2">0</p>
-
-            </div>
-
-            <button id="roll">ROLL</button>
-
-            <button id="hold">ROLL</button>
+                  <div class="ice">
 
 
-            </div>
+                    <p id="dice1">0</p>
 
-          <div id="player-1" class="col-md-5">
+                  </div>
 
-            <h3 id="player-label-1">Player 2</h3>
+                  <div class="ice">
 
-            <p id="total-1"></p>
+                    <p id="dice2">0</p>
 
-            <div id="current-1">
+                  </div>
 
-                <p id="blu">Currrent</p>
+                  <button id="roll">ROLL</button>
 
-              <p id="current-score-1"></p>
+                  <button id="hold">ROLL/button>
 
-            </div>
 
-        </div>
-</div>
-</div>
+                </div>
+
+                <div id="player-1" class="col-md-5">
+
+                  <h3 id="player-label-1">Player 2</h3>
+
+                  <p id="total-1"></p>
+
+                  <div id="current-1">
+
+                    <p id="blu">Currrent</p>
+
+                    <p id="current-score-1"></p>
+
+                  </div>
+
+                </div>
+              </div>
+      </div>
     </div>
-    </div>
+  </div>
 </body>
 <script src="js/scripts.js"></script>
+
 </html>
